Removed outdated options for custom db import